--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -2,6 +2,7 @@
 @import './utils/variables';
 @import "../../node_modules/bootstrap";
 
+@import './base/base.scss';
 
 @import './layout/sidebar.scss';
 @import './layout/footer.scss';
