--- a/assets/scss/layout/_sidebar.scss
+++ b/assets/scss/layout/_sidebar.scss
@@ -2,14 +2,30 @@
   width: 296px;
   height: 100%;
   padding: 40px 0;
+  flex-shrink: 0;
+}
+
+.name{
+  margin-bottom: 4px;
 }
 
 .nav-item{
   &.active{
+    color:#198754;
     border-left: 5px solid lighten($success,30%);
   }
   width: 100%;
   &:hover{
+    color: #198754;
     border-left: 5px solid lighten($success,30%);
   }
+}
+.nav-link{
+  color:$gray-900;
+  font-weight: bold; 
+}
+
+.little-fonts{
+  font-size: 14px;
+  color: $gray-600;
 }
